# SIMPLE_FTP_CLI

./: #build.sh#  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  LICENSE  Makefile  Program  README.md  build.sh  build_launch.sh  cmake_install.cmake
INCLUDE/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
SOURCES/: HEADER.h  MAIN_THREAD.cpp  SOURCE.cpp
